Sign up translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1225,6 +1225,7 @@ en:
   landing_page:
     hero:
       search: "Search"
+      signup: "Sign up"
   layouts:
     admin:
       admin: "%{service_name} admin panel"
