--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1222,6 +1222,9 @@ en:
     how_to_use:
       default_title: "How it works"
       default_content: "Here you can find information about how %{marketplace_name} works."
+  landing_page:
+    hero:
+      search: "Search"
   layouts:
     admin:
       admin: "%{service_name} admin panel"
