--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1193,6 +1193,10 @@ ca:
     how_to_use:
       default_title: ~
       default_content: ~
+  landing_page:
+    hero:
+      search: ~
+      signup: ~
   layouts:
     admin:
       admin: "Panell d'administració de %{service_name}"
