--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -1191,6 +1191,10 @@ hu:
     how_to_use:
       default_title: "Hogyan működik"
       default_content: ~
+  landing_page:
+    hero:
+      search: ~
+      signup: ~
   layouts:
     admin:
       admin: ~
