--- a/config/locales/ms-MY.yml
+++ b/config/locales/ms-MY.yml
@@ -1191,6 +1191,10 @@ ms-MY:
     how_to_use:
       default_title: ~
       default_content: ~
+  landing_page:
+    hero:
+      search: ~
+      signup: ~
   layouts:
     admin:
       admin: ~
