--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -1224,6 +1224,10 @@ nb:
     how_to_use:
       default_title: "Hvordan virker det"
       default_content: "Her kan du finne mer informasjon om hvordan %{marketplace_name} virker."
+  landing_page:
+    hero:
+      search: ~
+      signup: ~
   layouts:
     admin:
       admin: "%{service_name} administrasjonspanel"
