--- a/config/locales/sk-SK.yml
+++ b/config/locales/sk-SK.yml
@@ -1191,6 +1191,10 @@ sk-SK:
     how_to_use:
       default_title: ~
       default_content: ~
+  landing_page:
+    hero:
+      search: ~
+      signup: ~
   layouts:
     admin:
       admin: "%{service_name} panel administrátora"
