--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -1191,6 +1191,10 @@ bg:
     how_to_use:
       default_title: ~
       default_content: ~
+  landing_page:
+    hero:
+      search: ~
+      signup: ~
   layouts:
     admin:
       admin: "%{service_name} администраторски панел"
