--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1224,7 +1224,7 @@ en:
       default_content: "Here you can find information about how %{marketplace_name} works."
   landing_page:
     hero:
-      search: "Search"
+      search: Search
       signup: "Sign up"
   layouts:
     admin:
