--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1222,6 +1222,10 @@ fr:
     how_to_use:
       default_title: "Comment ça marche"
       default_content: "Ici vous pouvez trouver des informations sur le fonctionnement de %{marketplace_name}."
+  landing_page:
+    hero:
+      search: ~
+      signup: S'inscrire
   layouts:
     admin:
       admin: "Panneau d'administration %{service_name}"
