WTI pull [skip ci]

--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -1193,8 +1193,8 @@ ka:
       default_content: ~
   landing_page:
     hero:
-      search: ~
-      signup: ~
+      search: ძებნა
+      signup: დარეგისტრირდი
   layouts:
     admin:
       admin: ~
