--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -1209,6 +1209,10 @@ zh-HK:
     how_to_use:
       default_title: ~
       default_content: ~
+  landing_page:
+    hero:
+      search: ~
+      signup: ~
   layouts:
     admin:
       admin: "%{service_name}管理員版面"
