--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1224,8 +1224,8 @@ de:
       default_content: "Hier findest du Informationen darüber, wie %{marketplace_name} funktioniert."
   landing_page:
     hero:
-      search: ~
-      signup: ~
+      search: Suchen
+      signup: Registrieren
   layouts:
     admin:
       admin: "%{service_name} Verwaltung"
