--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -220,7 +220,7 @@ es-ES:
         access: "Preferencias de acceso"
         join_with_invite_only: "Los usuarios sólo pueden unirse a esta comunidad con una invitación de otro usuario."
         users_can_invite_new_users: "Todos los usuarios pueden invitar nuevos usuarios a esta comunidad."
-        private: "Este marketplace es privado (sólo los usuarios registrados pueden ver su contenido)."
+        private: "Esta comunidad de mercado colaborativo es privada (sólo los usuarios registrados pueden ver su contenido)."
         require_verification_to_post_listings: "Sólo los usuarios que han sido verificados por el administrador pueden publicar nuevos anuncios"
         search_preferences: "Preferencias de búsqueda"
         default_search_type: "Tipo de búsqueda: %{select_search_type}"
@@ -267,7 +267,7 @@ es-ES:
         save_user_status_successful: Guardado
         export_all_as_csv: "Exportar todos como CSV"
         save_user_status_error: "No se han guardado los cambios. Por favor, actualiza la página y vuelve a intentarlo."
-        ban_user_confirmation: "Esto bloquea al usuario del marketplace y le impide volver a acceder con esta cuenta. Estás seguro de que quieres continuar?"
+        ban_user_confirmation: "Esto bloquea al usuario de la comunidad y le impide volver a acceder con esta cuenta. Estás seguro de que quieres continuar?"
         ban_me_error: "No te puedes rechazar a ti mismo."
       social_media:
         social_media: "Social media"
