--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2159,6 +2159,9 @@ en:
   unit:
     day: day
     days: days
+  web:
+    topbar:
+      search_placeholder: "Search..."
   will_paginate:
     models:
       person:
