--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -2155,6 +2155,9 @@ da-DK:
   unit:
     day: dag
     days: dage
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
