--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2159,6 +2159,9 @@ de:
   unit:
     day: Tag
     days: Tage
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
