--- a/config/locales/el.yml
+++ b/config/locales/el.yml
@@ -2111,6 +2111,9 @@ el:
   unit:
     day: ~
     days: ~
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     previous_label: ~
     next_label: ~
