--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2161,7 +2161,7 @@ en:
     days: days
   web:
     topbar:
-      search_placeholder: "Search..."
+      search_placeholder: Search...
   will_paginate:
     models:
       person:
