--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -2157,6 +2157,9 @@ es-ES:
   unit:
     day: día
     days: días
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
