--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2118,6 +2118,9 @@ es:
   unit:
     day: ~
     days: ~
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     previous_label: ~
     next_label: ~
