--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2159,6 +2159,9 @@ fr:
   unit:
     day: jour
     days: jours
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
