--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2123,6 +2123,9 @@ ja:
   unit:
     day: 日
     days: 日
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
