--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -2161,6 +2161,9 @@ nb:
   unit:
     day: dag
     days: dager
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
