--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2161,6 +2161,9 @@ pt-BR:
   unit:
     day: dia
     days: dias
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
