--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -2105,6 +2105,9 @@ pt-PT:
   unit:
     day: ~
     days: ~
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
