--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2140,6 +2140,9 @@ ru:
   unit:
     day: день
     days: дней
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
