--- a/config/locales/tr-TR.yml
+++ b/config/locales/tr-TR.yml
@@ -2125,6 +2125,9 @@ tr-TR:
   unit:
     day: gün
     days: günler
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
