--- a/config/locales/zh-HK.yml
+++ b/config/locales/zh-HK.yml
@@ -2130,6 +2130,9 @@ zh-HK:
   unit:
     day: ~
     days: ~
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
