--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -2138,6 +2138,9 @@ zh:
   unit:
     day: 日
     days: 天
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       person:
