--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -2107,6 +2107,9 @@ ca:
   unit:
     day: ~
     days: ~
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     previous_label: ~
     next_label: ~
