--- a/config/locales/en-AU.yml
+++ b/config/locales/en-AU.yml
@@ -2105,6 +2105,9 @@ en-AU:
   unit:
     day: ~
     days: ~
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     previous_label: ~
     next_label: ~
