--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -2128,6 +2128,9 @@ it:
   unit:
     day: giorno
     days: giorni
+  web:
+    topbar:
+      search_placeholder: ~
   will_paginate:
     models:
       listing_conversation:
