--- a/config/locales/da-DK.yml
+++ b/config/locales/da-DK.yml
@@ -2157,7 +2157,7 @@ da-DK:
     days: dage
   web:
     topbar:
-      search_placeholder: ~
+      search_placeholder: Søg...
   will_paginate:
     models:
       person:
