--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2161,7 +2161,7 @@ de:
     days: Tage
   web:
     topbar:
-      search_placeholder: ~
+      search_placeholder: "Suche ..."
   will_paginate:
     models:
       person:
