--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -2130,7 +2130,7 @@ it:
     days: giorni
   web:
     topbar:
-      search_placeholder: ~
+      search_placeholder: Cerca...
   will_paginate:
     models:
       listing_conversation:
