--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -2163,7 +2163,7 @@ nb:
     days: dager
   web:
     topbar:
-      search_placeholder: ~
+      search_placeholder: Søk...
   will_paginate:
     models:
       person:
