Default search placeholder

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1226,6 +1226,7 @@ en:
     hero:
       search: Search
       signup: "Sign up"
+      search_placeholder: "What are you looking for?"
   layouts:
     admin:
       admin: "%{service_name} admin panel"
